--- a/src/css/night-react/components/_scrollbar.sass
+++ b/src/css/night-react/components/_scrollbar.sass
@@ -12,7 +12,7 @@
   +block(scrollbar)
     @include opacity(0.3)
     position: absolute
-    bottom: 18px
+    bottom: 25px
     left: 0
     display: block
     width: 100%
